Added Chat Group Controller and is services
